feat(api.v1): allow listing tagged group's members
